タイトルの修正

--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
     
         
         <div>
-            <h3><a href="/posts/how-to-participate-in-rosettahome-on-kubernetes-with-raspberry-pi/">#4 How to Participate in Rosetta@home on Kubernetes With Raspberry Pi</a></h3>
+            <h3><a href="/posts/how-to-participate-in-rosettahome-on-kubernetes-with-raspberry-pi/">#4 How to Participate in Rosetta@home on Kubernetes with Raspberry Pi</a></h3>
             Hello, I&rsquo;m @izewfktvy.
 Last month, I made Kubernetes manifests and Docker containers to participate in Rosetta@home project with Raspberry Pi Kubernetes Cluster.
 Rosetta@home is a distributed computing project for protein structure prediction on the Berkeley Open Infrastructure for Network Computing (BOINC) platform, run by the Baker laboratory at the University of Washington. This project recently added support for fighting COVID-19.
