--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,20 @@ If you have your RasPi K8s cluster, you can help analyzing COVID-19 through pari
 
                 </div>
             </div>
-        </div>
+        </div><div id="commpost"></div>
+<script type="text/javascript">
+    (function() {
+        var dsq = document.createElement('script');
+        dsq.type = 'text/javascript'; dsq.async = true; dsq.src = './js/embed.js';
+        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+
+         var dlq = document.createElement('link');
+         dlq.rel = 'stylesheet'; dlq.type = 'text/css'; dlq.href = './assets/css/embed.css';
+         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dlq);
+    })();
+</script>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+
 </body>
 <script type="text/javascript" src="https://techblog.on-going.jp/js/jquery.min.js"></script>
 <script type="text/javascript" src="https://techblog.on-going.jp/js/jquery-migrate.min.js"></script>
